--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ai": "5.0.39",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "gsap": "^3.13.0",
     "lucide-react": "0.543.0",
     "motion": "^12.23.12",
     "nanoid": "^5.1.5",
