--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-tooltip": "1.2.8",
+    "@supabase/supabase-js": "^2.57.4",
     "@tabler/icons-react": "^3.34.1",
     "ai": "5.0.39",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "dotenv": "^17.2.2",
     "gsap": "^3.13.0",
     "lucide-react": "0.543.0",
     "motion": "^12.23.12",
@@ -30,6 +32,7 @@
     "react-dom": "19.1.0",
     "routes": "link:@react-router/dev/routes",
     "simplex-noise": "^4.0.3",
+    "supabase": "^2.40.7",
     "tailwind-merge": "3.3.1",
     "use-stick-to-bottom": "^1.1.1"
   },
